# lexwork

./: .gitignore  CHANGELOG.md  HISTORY.txt  README.rst  pyproject.toml  setup.py
.github/workflows/: tests.yml
changes/: TI-3219.bugfix  TI-3219.feature
lexwork/: __init__.py  client.py
