[tool.poetry]
name = "ftw-lexwork"
version = "2025.1.0"
description = "API Client for Lexwork PDF Signer."
authors = ["4teamwork AG"]
readme = "README.rst"
packages = [{include = "lexwork"}]

[tool.poetry.dependencies]
python = ">=3.12, <4"
requests = "^2"
urllib3 = "^2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "7.3.0"
mypy = "^1.17.1"
towncrier = "^25.8.0"
zest-releaser = "^9.6.2"
zestreleaser-towncrier = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
      \.git
    | \.venv
    | \.eggs
  )/
)
'''

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = false
line_length = 200
known_first_party = "lexwork"
lines_after_imports = 2
skip_glob = ".venv,.eggs"

[tool.towncrier]
package = "lexwork"
directory = "changes"
template = "towncrier.md"
filename = "CHANGELOG.md"
underlines = ["-", ""]

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "other"
name = "Other changes:"
showcontent = true

[tool.mypy]
follow_imports = "skip"
strict = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_any_generics = false
